--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@ scale=1.0”>
     <link href="https://fonts.googleapis.com/css2?family=Anta&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     
     <section class=”conteudo-principal”></section>
-<h2 class=”titulo-principal”>Meus Objetivos do ano_</h2>
+    <h2 class=”titulo-principal”>Meus Objetivos do ano_</h2>
+    <h2 class=”titulo-principal”>Meus Objetivos do ano<span>_<span></h2>
 <div class=”botoes”>
 <button class=”botao”>Cursos na Alura</button>
-<button class=”botao”>Criar projetos em JavaScript<
-button>
+<button class=”botao”>Criar projetos em JavaScript
+<button>
 <button class=”botao”>Criar um portfólio</button>
 <button class=”botao”>Atualizar meu currículo</button>
 </div>
