--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@ scale=1.0”>
     <h2 class=”titulo-principal”>Meus Objetivos do ano_</h2>
     <h2 class=”titulo-principal”>Meus Objetivos do ano<span>_<span></h2>
 <div class=”botoes”>
-<button class=”botao”>Cursos na Alura</button>
+<button class=”botao ativo”>Cursos na Alura</button>
 <button class=”botao”>Criar projetos em JavaScript
 <button>
 <button class=”botao”>Criar um portfólio</button>
 <button class=”botao”>Atualizar meu currículo</button>
 </div>
+<script src=»main.js» const botoes = document.querySelectorAll(«.botao»);
+console.log(botoes)></script>
 </body>
-</html>
+</html> load resource: the server responded with a status of 404 (Not Fo
